# workflow_runner_mvp

./: .gitignore  README.md  nvim  pyproject.toml
data/inbox/: sample.txt
data/output/: summary.json
examples/: file_watcher_event.sample.json  file_watcher_integration_example.md  workflow.sample.yaml
logs/: execution.sample.json
src/workflow_runner/: actions.py  cli.py  contract.py  executor.py  loader.py  logger.py  validator.py
tests/: test_actions.py  test_cli.py  test_contract.py  test_executor.py  test_integration_examples.py  test_loader.py  test_logger.py  test_validator.py
