[project]
name = "workflow-runner-mvp"
version = "0.1.0"
description = "A minimal YAML-based workflow runner for RADAR Services utilities."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.0"
]

[project.scripts]
workflow-runner = "workflow_runner.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
